added cellboro-package documantation

--- a/cellboro/NAMESPACE
+++ b/cellboro/NAMESPACE
@@ -7,3 +7,4 @@ S3method(delaunay.neighbours,triSht)
 export(delaunay.neighbours)
 import(dplyr)
 import(interp)
+importFrom(utils,packageDescription)
