devtools::document run for the cellboro package

--- a/cellboro/NAMESPACE
+++ b/cellboro/NAMESPACE
@@ -4,7 +4,9 @@ S3method(delaunay.neighbours,SpatialExperiment)
 S3method(delaunay.neighbours,default)
 S3method(delaunay.neighbours,numeric)
 S3method(delaunay.neighbours,triSht)
+export(addVoronoiArea)
 export(delaunay.neighbours)
+import(SpatialExperiment)
 import(dplyr)
 import(interp)
 importFrom(utils,packageDescription)
