--- a/cellboro/NAMESPACE
+++ b/cellboro/NAMESPACE
@@ -9,4 +9,5 @@ export(delaunay.neighbours)
 import(SpatialExperiment)
 import(dplyr)
 import(interp)
+importFrom(magrittr,"%>%")
 importFrom(utils,packageDescription)
