--- a/cellboro/NAMESPACE
+++ b/cellboro/NAMESPACE
@@ -9,5 +9,5 @@ export(delaunay.neighbours)
 import(SpatialExperiment)
 import(dplyr)
 import(interp)
-importFrom(magrittr,"%>%")
+import(utils)
 importFrom(utils,packageDescription)
